# cpu_usage_tracker

./: CMakeLists.txt  README.MD  cpu_usage_tracker.c  main.c
header/: analyzer.h  globals.h  printer.h  reader.h
source/: CMakeLists.txt  analyzer.c  logger.c  printer.c  reader.c  watchdog.c
tests/: CMakeLists.txt  test_core_number.c  test_read_file.c
